# bartib

./: .gitignore  .project  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: test.yml
doc/: bartib-file-format.md  bartib.md
misc/: _bartib  bartib.fish  bartibCompletion.sh
src/: activity.rs  bartib_file.rs  conf.rs  format_util.rs  lib.rs  list_commands.rs  main.rs  manipulation_commands.rs  output.rs  project.rs  table.rs  task.rs
src/controller/: list.rs  manipulation.rs  mod.rs  report.rs  status.rs
src/data/: activity.rs  bartib_file.rs  filter.rs  getter.rs  mod.rs  processor.rs  round_util.rs
src/view/: format_util.rs  list.rs  mod.rs  output.rs  report.rs  status.rs  table.rs
wix/: main.wxs
