[package]
name = "bartib"
version = "1.0.1"
authors = ["Nikolas Schmidt-Voigt <nikolas.schmidt-voigt@posteo.de>"]
description = "A simple timetracker for the command line"
homepage = "https://github.com/nikolassv/bartib"
repository = "https://github.com/nikolassv/bartib"
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.0"
clap = "2.0.0"
thiserror = "1.0.0"
anyhow = "1.0.0"
nu-ansi-term = "0.46.0"
term_size = "0.3.0"
textwrap = "0.16.0"
wildmatch = "2.3.0"
